# modular-ingestion-framework

./: .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml
audit/: logger.py  metrics.py
connectors/: file_connector.py  rest_connector.py
core/: base_connector.py  base_loader.py  base_validator.py  exceptions.py  models.py  pipeline.py
examples/: pipeline_ibge.py  pipeline_selic.py  pipeline_with_transformers.py
input/: diagrama1_pipeline_flow.excalidraw  diagrama2_arquitetura.excalidraw  diagrama3_abstracao.excalidraw  municipios_pi.csv  municipios_pi.xlsx
loaders/: json_loader.py  postgres_loader.py
scripts/: README.md  explorando_connectors.py  explorando_loaders.py  explorando_logger.py  explorando_metrics.py  explorando_pipeline.py  explorando_validadores.py  explorando_validators.py  pipeline_example.py  pipeline_ibge.py
tests/test_audit/: test_metrics.py
tests/test_connectors/: test_connectors.py
tests/test_core/: test_exceptions.py  test_pipeline.py
tests/test_loaders/: test_loaders.py
tests/test_transformers/: test_transformers.py
tests/test_validators/: test_validators.py
transformers/: __init__.py  base_transformer.py  enrich_transformer.py  field_mapper.py  filter_transformer.py  ibge_transformer.py  selic_transformer.py  transform_pipeline.py
validators/: pydantic_validator.py  quality_validator.py  schema_validator.py
